my-apps/media/radarr/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: radarr
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/warn: privileged
