my-apps/media/radarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: radarr
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 7878
    protocol: TCP
  selector:
    app: radarr
