my-apps/media/radarr/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: radarr
  namespace: radarr
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Radarr"
    gethomepage.dev/group: "Media"
    gethomepage.dev/icon: "sh-radarr"
    gethomepage.dev/href: "https://rdr.serverops.live"
spec:
  hostnames:
  - rdr.serverops.live
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: gateway-internal
    namespace: gateway
    sectionName: https
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: radarr
      port: 80
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
